# NCooper

./: CMakeLists.txt  README.md  cpplint.py  default.cfg  main.cpp
include/ai/nn/: activation.hpp  neuron.hpp
include/ai/nn/layer/: activationLayer.hpp  layer.hpp  preActivationLayer.hpp
include/ai/nn/network/: network.hpp
include/ai/nn/proto/: network.pb.h
include/math/linalg/: matrix.hpp  vector.hpp
src/ai/nn/: activation.cpp  neuron.cpp
src/ai/nn/layer/: activationLayer.cpp  layer.cpp  preActivationLayer.cpp
src/ai/nn/network/: network.cpp
src/ai/nn/proto/: network.pb.cc  network.proto
src/math/linalg/: matrix.cpp  vector.cpp
